Fix bug that caused matrix to be in wrong position on startup.

--- a/src/app/components/connectivityMatrixView/cmMatrixView.css
+++ b/src/app/components/connectivityMatrixView/cmMatrixView.css
@@ -23,11 +23,9 @@
 }
 
 .matrix-view-center {
-  display: inline-block;
   overflow-x: auto;
   overflow-y: auto;
-  height: 230px;
-  width: 538px;
+  display: inline-block;
 }
 
 .matrix-view-string-attribute {
